--- a/index.html
+++ b/index.html
@@ -4,13 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{border-radius: 40%;}
+        section1{text-align: center;}
+        a{color:#e3ba69;}
+        body{color:#484a4fa2;
+            background-image:url(自己紹介_背景.jpg);}
+        section2{text-align: center;}
+        span{color:#4564e4}
+        h3{color:#484a4f;}
+        h4{color:#484a4fdd;}
+        section1{color:#484a4f;}
+    </style>
+    <meta name="robots" content="noindex" />
 </head>
+
 <body>
-    <h1>my first home page
-    おやすみ
-    </h1>
-<p>hello world !  おはようございます  
+    <section1>
+        <div><img src="自己紹介_アイコン.JPG" alt="アイコン画像" width="280" height="280"></div>
+        <div style="line-height:0.8;"><h1>山﨑 直哉<h5>Naoya Yamazaki</h5></h1></div>
+    </section1>
+
+      <br>
+
+    <h3>~経歴~</h3>
+    2004年 <span>横浜</span> 出身の大学生。小学校・中学校は地元の公立学校に進学し、高校は法政大学の系列校に進学。その後、<a href="https://sd.ws.hosei.ac.jp">法政大学デザイン工学部システムデザイン学科</a>に進学し今に至る。
+    大学では<span>プロダクトデザイン</span>や<span>プログラミング</span>、<span>マネジメント</span>といった幅広い分野を学びつつ、<span>空手部</span>での活動やアルバイトなどそれなりに忙しい日々を送っている。
     
-</p>
+    <br>
+    <br>
+
+    <h3>~好み~</h3>
+    <div style="line-height:0.5;">
+        <h4>・読書</h4>
+     自称読書家。年間120冊前後読んでいるらしい。<span>ミステリー小説</span>を好んでよく読んでいる。収入の大半は書籍代に消えてなくなる。</div>
+
+     <div style="line-height:0.5;">
+        <h4>・カフェ</h4>
+     暇さえあれば<span>カフェ</span>に行く。読書するためにカフェに行くので、やはり本に毒されているのかもしれない。そしてお金もなくなる。</div>
+
+     <div style="line-height:0.5;">
+        <h4>・音楽</h4>
+     <span>ヨルシカ</span> / <span>YOASOBI</span> / <span>ずっと真夜中でいいのに。</span>/ <span>Eve</span> / <span>なとり</span>が好き。つい先日YOASOBIのドームチケットの抽選外れて泣き崩れたばかり。</div>
+
+     <div style="line-height:0.5;">
+        <h4>・空</h4>
+     つい写真を撮ってしまうほど<span>空</span>が好き。<a href="https://www.instagram.com/zakidesu_domo?igsh=MW1xcGpzc3ZiN2w2NA%3D%3D&utm_source=qr">instagram</a>によく写真を載せているので見てみてほしい。</div>
+
+     <div style="line-height:0.5;">
+        <h4>・衣</h4>
+    綺麗めな服をよく着ている。一癖ある服も好き。</div>
+
+    <div style="line-height:0.5;">
+        <h4>・食</h4>
+     <span>鱧</span>の湯引きと<span>チーズケーキ</span>に目がない。パクチーとセロリが苦手。</div>
+
+     <section2>
+        <div><a href="https://www.instagram.com/zakidesu_domo?igsh=MW1xcGpzc3ZiN2w2NA%3D%3D&utm_source=qr" alt="画像にリンクを挿入"><img src="インスタアイコン.PNG" width="150" height="150"></a></div>
+     </section2>
+     
+
 </body>
 </html>
