--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <style>
         img{border-radius: 40%;}
         section1{text-align: center;}
@@ -33,7 +35,7 @@
     <br>
 
     <h3>~好み~</h3>
-    <div style="line-height:0.8;">
+    <div style="line-height:1;">
         <h4>・読書</h4>
      自称読書家。年間120冊前後読んでいるらしい。<span>ミステリー小説</span>を好んでよく読んでいる。収入の大半は書籍代に消えてなくなる。</div>
 
@@ -41,19 +43,19 @@
         <h4>・カフェ</h4>
      暇さえあれば<span>カフェ</span>に行く。読書するためにカフェに行くので、やはり本に毒されているのかもしれない。そしてお金もなくなる。</div>
 
-     <div style="line-height:0.5;">
+     <div style="line-height:1;">
         <h4>・音楽</h4>
      <span>ヨルシカ</span> / <span>YOASOBI</span> / <span>ずっと真夜中でいいのに。</span>/ <span>Eve</span> / <span>なとり</span>が好き。つい先日YOASOBIのドームチケットの抽選外れて泣き崩れたばかり。</div>
 
-     <div style="line-height:0.5;">
+     <div style="line-height:1;">
         <h4>・空</h4>
      つい写真を撮ってしまうほど<span>空</span>が好き。<a href="https://www.instagram.com/zakidesu_domo?igsh=MW1xcGpzc3ZiN2w2NA%3D%3D&utm_source=qr">instagram</a>によく写真を載せているので見てみてほしい。</div>
 
-     <div style="line-height:0.5;">
+     <div style="line-height:1;">
         <h4>・衣</h4>
     綺麗めな服をよく着ている。一癖ある服も好き。</div>
 
-    <div style="line-height:0.5;">
+    <div style="line-height:1;">
         <h4>・食</h4>
      <span>鱧</span>の湯引きと<span>チーズケーキ</span>に目がない。パクチーとセロリが苦手。</div>
 
